// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Обзор 
      <span>
        1
      </span>
       
      расхода
       на сумму 
      <span>
        0.00 $
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Добавить расход
      </Link>
    </div>
  </div>
</div>
`;

exports[`should correctly render ExpensesSummary with multiply expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Обзор 
      <span>
        23
      </span>
       
      расходов
       на сумму 
      <span>
        0.00 $
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Добавить расход
      </Link>
    </div>
  </div>
</div>
`;
